--- a/easyfmis/App.config
+++ b/easyfmis/App.config
@@ -12,6 +12,9 @@
         <add name="easyfmis.Properties.Settings.easyerpConnectionString"
             connectionString="Data Source=localhost;Initial Catalog=easyerp;Integrated Security=True"
             providerName="System.Data.SqlClient" />
+        <add name="easyfmis.Properties.Settings.easyerpConnectionString1"
+            connectionString="Data Source=localhost;Initial Catalog=easyerp;Persist Security Info=True;User ID=sa"
+            providerName="System.Data.SqlClient" />
     </connectionStrings>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1" />
