--- a/easyfmis/easyfmis.csproj
+++ b/easyfmis/easyfmis.csproj
@@ -86,6 +86,8 @@
     <Compile Include="Controllers\TrnSalesOrderItemController.cs" />
     <Compile Include="Controllers\TrnStockInController.cs" />
     <Compile Include="Controllers\TrnStockInItemController.cs" />
+    <Compile Include="Controllers\TrnSalesInvoiceController.cs" />
+    <Compile Include="Controllers\TrnSalesInvoiceItemController.cs" />
     <Compile Include="Controllers\TrnStockTransferItemController.cs" />
     <Compile Include="Controllers\TrnStockTransferController.cs" />
     <Compile Include="Controllers\TrnStockOutController.cs" />
@@ -96,6 +98,8 @@
       <DependentUpon>easyfmisdb.dbml</DependentUpon>
     </Compile>
     <Compile Include="Entities\DgvRepStockCardReportEntity.cs" />
+    <Compile Include="Entities\DgvSalesInvoiceEntity.cs" />
+    <Compile Include="Entities\DgvSalesInvoiceItemEntity.cs" />
     <Compile Include="Entities\DgvTrnInventoryEntriesEntity.cs" />
     <Compile Include="Entities\DgvRepInventoryReportEntity.cs" />
     <Compile Include="Entities\DgvItemListItemEntity.cs" />
@@ -138,6 +142,8 @@
     <Compile Include="Entities\SysCurrentEntity.cs" />
     <Compile Include="Entities\SysFormEntity.cs" />
     <Compile Include="Entities\TrnInventoryEntity.cs" />
+    <Compile Include="Entities\TrnSalesInvoiceEntity.cs" />
+    <Compile Include="Entities\TrnSalesInvoiceItemEntity.cs" />
     <Compile Include="Entities\TrnSalesOrderEntity.cs" />
     <Compile Include="Entities\TrnSalesOrderItemEntity.cs" />
     <Compile Include="Entities\TrnStockInEntity.cs" />
@@ -265,6 +271,18 @@
     </Compile>
     <Compile Include="Forms\Software\SysSoftwareForm.designer.cs">
       <DependentUpon>SysSoftwareForm.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Forms\Software\TrnSalesInvoice\TrnSalesInvoiceForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\Software\TrnSalesInvoice\TrnSalesInvoiceForm.Designer.cs">
+      <DependentUpon>TrnSalesInvoiceForm.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Forms\Software\TrnSalesInvoice\TrnSalesInvoiceDetailForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\Software\TrnSalesInvoice\TrnSalesInvoiceDetailForm.Designer.cs">
+      <DependentUpon>TrnSalesInvoiceDetailForm.cs</DependentUpon>
     </Compile>
     <Compile Include="Forms\Software\TrnSalesOrder\TrnSalesOrderForm.cs">
       <SubType>Form</SubType>
@@ -423,6 +441,12 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Forms\Software\SysSoftwareForm.resx">
       <DependentUpon>SysSoftwareForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Forms\Software\TrnSalesInvoice\TrnSalesInvoiceForm.resx">
+      <DependentUpon>TrnSalesInvoiceForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Forms\Software\TrnSalesInvoice\TrnSalesInvoiceDetailForm.resx">
+      <DependentUpon>TrnSalesInvoiceDetailForm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Forms\Software\TrnSalesOrder\TrnSalesOrderForm.resx">
       <DependentUpon>TrnSalesOrderForm.cs</DependentUpon>
